<resources>

    <string name="app_name">BookSeller</string>
    <string name="title_activity_seller">BookSeller</string>

    <string name="login_tip">输入iBeiKe论坛用户名密码登录</string>
    <string name="login_username">用户名: </string>
    <string name="login_username_hint">输入用户名</string>
    <string name="login_passwd">密码: </string>
    <string name="login_passwd_hint">输入密码</string>
    <string name="login_button">登录</string>
    <string name="login_nologin">您还未登录</string>
    <string name="login_failed_user">登录失败，请检查用户名密码。</string>
    <string name="login_failed_network">登录失败，网络错误</string>
    <string name="login_successful">发布成功</string>
    
    <string name="seller_title">标题: </string>
    <string name="seller_title_hint">输入帖子标题</string>
    <string name="seller_add">添加</string>
    <string name="seller_submit">提交</string>
    <string name="seller_spinner_prompt">选择历史记录</string>
    <string name="seller_spinner_last">新建记录</string>
    
    <string name="row_title">输入标题或扫描</string>
    <string name="row_number">数量:</string>
    <string name="row_price">价格:</string>
    <string name="row_edit">编辑</string>
    <string name="row_delete">删除</string>
    
    <string name="status_searching">正在查询&#8230;</string>
    <string name="status_submitting">正在提交&#8230;</string>
    <string name="status_null">没有相应数据</string>
    
    <string name="edit_save">保存</string>
    <string name="edit_scan">扫描</string>
    <string name="edit_cancel">取消</string>
    <string name="edit_title">标题：     </string>
    <string name="edit_title_hint">输入图书标题</string>
    <string name="edit_number">数量</string>
    <string name="edit_price">价格</string>
    <string name="edit_author">作者：     </string>
    <string name="edit_author_hint">输入图书作者</string>
    <string name="edit_press">出版社：</string>
    <string name="edit_press_hint">输入图书出版社</string>
    
    <string name="content_price"> 元/本</string>
    
    <string name="menu_seller_history">历史</string>
    <string name="menu_seller_about">关于</string>
    <string name="menu_seller_quit">退出</string>
    
    
    <string name="about_text">图书扫描添加，发布到iBeiKe校内交易板块。\n
        Author: liubing\n</string>
    <string name="copy_text">Copyright © 2010&#8211;2012 UnixOSS.com All Rights Reserved\n</string>
</resources>