<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dip"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dip" >

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
	    <TextView
	        android:id="@+id/edit_textView1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/edit_title"
	        android:layout_weight="10" />
	
		<EditText
		    android:id="@+id/edit_editText1"
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:singleLine="true"
		    android:layout_weight="2"
		    android:hint="@string/edit_title_hint" />
	</LinearLayout>

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
	    <TextView
	        android:id="@+id/edit_textView2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/edit_author"
	        android:layout_weight="10" />
	
		<EditText
		    android:id="@+id/edit_editText2"
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:singleLine="true"
		    android:layout_weight="2"
		    android:hint="@string/edit_author_hint" />
	</LinearLayout>

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
	    <TextView
	        android:id="@+id/edit_textView3"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/edit_press"
	        android:layout_weight="10" />
	
		<EditText
		    android:id="@+id/edit_editText3"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:singleLine="true"
		    android:layout_weight="2"
		    android:hint="@string/edit_press_hint" />
	</LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
	
	    <TextView
	        android:id="@+id/edit_textView4"
		    android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/row_number"
	        android:layout_weight="10"/>

	    <EditText
	        android:id="@+id/edit_editText4"
		    android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="8"
	        android:hint="@string/edit_number"
	        android:inputType="number" >
	    </EditText>
	
	    <TextView
	        android:id="@+id/edit_textView5"
		    android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/row_price"
	        android:layout_weight="10"/>

	    <EditText
	        android:id="@+id/edit_editText5"
		    android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="8"
	        android:hint="@string/edit_price"
	        android:inputType="numberDecimal" >
	    </EditText>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
	    <Button
	        android:id="@+id/edit_button2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/edit_save" />
	
	    <Button
	        android:id="@+id/edit_button3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/edit_cancel"
	        android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
