<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/login_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/login_tip" />

    <TextView
        android:id="@+id/login_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/login_textView1"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="92dp"
        android:text="@string/login_username" />

    <EditText
        android:id="@+id/login_editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/login_textView2"
        android:layout_alignBottom="@+id/login_textView2"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/login_textView2"
        android:hint="@string/login_username_hint"
        android:ems="10" />

    <TextView
        android:id="@+id/login_textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_editText1"
        android:layout_marginTop="87dp"
        android:layout_toLeftOf="@+id/login_editText1"
        android:text="@string/login_passwd" />

    <EditText
        android:id="@+id/login_editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/login_textView3"
        android:layout_alignBottom="@+id/login_textView3"
        android:layout_alignLeft="@+id/login_editText1"
        android:hint="@string/login_passwd_hint"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/login_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:text="@string/login_button" />

</RelativeLayout>
