<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <LinearLayout 
        android:id="@+id/seller_titleLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/seller_textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/seller_title" />

    <EditText
        android:id="@+id/seller_editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_weight="20"
        android:hint="@string/seller_title_hint"
        android:ems="10" >
    </EditText>
    </LinearLayout>

    <ListView
        android:id="@+id/seller_listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seller_buttonline"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/seller_titleLine" >

    </ListView>

    <LinearLayout 
        android:id="@+id/seller_buttonline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/seller_spinner1"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_weight="1.5"
            android:prompt="@string/seller_spinner_prompt" />

        <Button
            android:id="@+id/seller_button3"
            android:layout_width="match_parent"
            android:layout_height="35dip"
            android:layout_weight="2"
            android:text="@string/edit_scan" />

        <Button
            android:id="@+id/seller_button1"
            android:layout_width="match_parent"
            android:layout_height="35dip"
            android:layout_weight="2"
            android:text="@string/seller_add" />

        <Button
            android:id="@+id/seller_button2"
            android:layout_width="match_parent"
            android:layout_height="35dip"
            android:layout_weight="2"
            android:text="@string/seller_submit" />

    </LinearLayout>

</RelativeLayout>
