<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/row_textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.95"
        android:text="id" />

    <TextView
        android:id="@+id/row_textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.65"
        android:singleLine="true" />

    <TextView
        android:id="@+id/row_textView3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.9"
        android:text="@string/row_number" />

    <TextView
        android:id="@+id/row_textView4"
        android:layout_width="fill_parent"
        android:layout_weight="0.95"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/row_textView5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.9"
        android:text="@string/row_price" />

    <TextView
        android:id="@+id/row_textView6"
        android:layout_width="fill_parent"
        android:layout_weight="0.95"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/row_button1"
        android:layout_width="fill_parent"
        android:layout_height="34dip"
        android:layout_weight="0.85"
        android:text="@string/row_edit" />

    <ImageButton
        android:id="@+id/row_imageButton1"
        android:layout_width="fill_parent"
        android:layout_height="34dip"
        android:contentDescription="@string/row_delete"
        android:layout_weight="0.95"
        android:background="@null"
        android:src="@android:drawable/ic_delete" />

</LinearLayout>
